--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav class="site-nav">
                 <a href="./" class="logo" lang="en"> <span class="logo-part">Web</span>Studio</a>
                 <ul class="list nav-list">
-                    <li><a href="./index.html" class="link nav-link current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link nav-link">Портфолио</a></li>
-                    <li><a href="" class="link nav-link">Контакты</a></li>
+                    <li class="nav-item"><a href="./index.html" class="link nav-link current">Студия</a></li>
+                    <li class="nav-item"><a href="./portfolio.html" class="link nav-link">Портфолио</a></li>
+                    <li class="nav-item"><a href="" class="link nav-link">Контакты</a></li>
                 </ul>
             </nav>
     
@@ -42,7 +42,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
-                <button type="button" class="button">Заказать услугу</button>
+                <button type="button" class="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <section class="benefits section">
@@ -92,10 +92,25 @@
             <div class="container">
                 <h2 class="work-title">Чем мы занимаемся</h2>
                 <ul class="list grid">
-                    <li class="work-item grid-item"><img src="./images/studio/box1.jpg" alt="Программист пишет код на планшете в офисе" width="370"></li>
-                    <li class="work-item grid-item"><img src="./images/studio/box2.jpg"
-                            alt="Веб-дизайнер выбирает на ноутбуке виджеты для экрана мобильного телефона" width="370"></li>
-                    <li class="work-item grid-item"><img src="./images/studio/box3.jpg" alt="Веб-дизайнер выборает цвет из палитры на планшете" width="370"></li>
+                    <li class="work-item grid-item">
+                        <div class="work-item-thumb">
+                            <img src="./images/studio/box1.jpg" alt="Программист пишет код на планшете в офисе" width="370">
+                            <p class="work-item-name">Десктопные приложения</p>
+                        </div>                        
+                    </li>
+                    <li class="work-item grid-item">
+                        <div class="work-item-thumb">
+                            <img src="./images/studio/box2.jpg" alt="Веб-дизайнер выбирает на ноутбуке виджеты для экрана мобильного телефона"
+                                width="370">
+                            <p class="work-item-name">Мобильные приложения</p>
+                        </div>
+                    </li>
+                    <li class="work-item grid-item">
+                        <div class="work-item-thumb">
+                            <img src="./images/studio/box3.jpg" alt="Веб-дизайнер выборает цвет из палитры на планшете" width="370">
+                            <p class="work-item-name">Дизайнерские решения</p>
+                        </div>
+                    </li>
                 </ul>
             </div>          
         </section>
@@ -363,5 +378,15 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="modal-button" data-modal-close>
+                <svg class="modal-button-icon" width="18" height="18">
+                    <use href="./images/studio/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
