Задает css-переходы

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,10 @@
                         <a href="" class="link example-link">
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img1.jpg" alt="Ноутбук с открытой страницей сайта" width="370" height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name">Технокряк</h2>
@@ -69,8 +71,10 @@
                         <a href="" class="link example-link">
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img2.jpg" alt="Два баскетболиста с мячом" width="370" height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
@@ -84,8 +88,10 @@
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img3.jpg" alt="Логотип с названием ресторана на фоне изображения рыбы" width="370"
                                 height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name">Ресторан <span lang="en">Seafood</span></h2>
@@ -98,8 +104,10 @@
                         <a href="" class="link example-link">
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img4.jpg" alt="Большие черные наушники" width="370" height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name">Проект <span lang="en">Prime</span></h2>
@@ -113,8 +121,10 @@
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img5.jpg" alt="Белая и коричневая коробки разного размера" width="370"
                                 height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name">Проект <span lang="en">Boxes</span></h2>
@@ -127,8 +137,10 @@
                         <a href="" class="link example-link">
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img6.jpg" alt="Десктоп с открытой страницей сайта" width="370" height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name" lang="en">Inspiration has no Borders</h2>
@@ -141,8 +153,10 @@
                         <a href="" class="link example-link">
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img7.jpg" alt="Открытый разворот журнала" width="370" height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name">Издание <span lang="en">Limited Edition</span></h2>
@@ -155,8 +169,10 @@
                         <a href="" class="link example-link">
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img8.jpg" alt="Этикетка с текстом на шнурке" width="370" height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name">Проект <span lang="en">LAB</span></h2>
@@ -169,8 +185,10 @@
                         <a href="" class="link example-link">
                             <div class="exapmle-img-thumb">
                                 <img src="./images/portfolio/img9.jpg" alt="Человек открыл страницу сайта на ноутбуке" width="370" height="294">
-                                <p class="example-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="img-text-thumb">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="example-item">
                                 <h2 class="example-name" lang="en">Growing Business</h2>
